First Module Commit
Modified About.html adding pictures, page title and content.
Modified Contact.htmk adding a picture, contact info and footer.
Added routes for djangoproj/urls for abput and contact.
Modified djangoproj/settings adding STATICFILES_DIR, DIRS, ALLOWED_HOSTS,
CSRF_TRUSTED_ORIGINS.

--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -124,3 +124,9 @@ img{
     text-align:center;
     box-shadow: 2px 2px 3px #999;  
 }
+
+/* Utility: justified text for paragraphs that should be evenly aligned */
+.text-justify {
+  text-align: justify;
+  text-justify: inter-word;
+}
